--- a/HQSOFT.Common/src/HQSOFT.Common.Blazor/Components/HQSOFTLeftSideForm.razor
+++ b/HQSOFT.Common/src/HQSOFT.Common.Blazor/Components/HQSOFTLeftSideForm.razor
@@ -1,6 +1,7 @@
 ﻿@using Blazorise.Components;
 @using HQSOFT.Common.HQAssigneds;
 
+@using HQSOFT.Common.HQShares;
 @using Volo.Abp.AspNetCore.Components.Messages;
 @using Volo.Abp.BlazoriseUI.Components
 @using Volo.Abp.Identity;
@@ -11,6 +12,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @inherits CommonComponentBase
 @inject IHQAssignedsAppService HQAssignedsAppService
+@inject IHQSharesAppService HQSharesAppService
 @inject IUiMessageService UiMessageService
 @inject IRemoteServiceConfigurationProvider RemoteServiceConfigurationProvider
 @inject NavigationManager NavigationManager
@@ -25,10 +27,20 @@
             <Icon Name="IconName.PlusCircle" Style="color:black" />
         </button>
         <br />*@
-        <Button Style="margin-top: 20px; width:100%" Outline Clicked="OpenCreateHQAssignedModalAsync">
+        <Button Style="margin-top: 20px; width:100%" Outline Clicked="OpenEditHQAssignedModalAsync">
             <Icon Name="IconName.PlusCircle"  />
         </Button>
+        @foreach(var item in SelectedIdentityUsers)
+        {
+            <Field>
+                <Text>              
+                     @item.DisplayName
+                </Text>
+            </Field>
+        }
+        <Span>Vinh Lam</Span>
 
+ 
         <Icon Name="IconName.Paperclip" />
         <Text class="title">Attachments</Text>
 
@@ -53,7 +65,7 @@
             <Icon Name="IconName.PlusCircle" Style="color:black" />
         </button>
         <br />*@
-        <Button Color="Color.Dark" Style="margin-top: 20px; width:100%" Outline >
+        <Button Color="Color.Dark" Style="margin-top: 20px; width:100%" Outline Clicked="OpenEditHQShareModalAsync">
             <Icon Name="IconName.PlusCircle" />
         </Button>
         <Row Style="margin-top:100px"></Row>
@@ -69,7 +81,7 @@
     </CardBody>
 </Card>
 
-@* ************************* EDIT MODAL ************************* *@
+@* ************************* EDIT MODAL ASSIGNED ************************* *@
 <Modal @ref="EditHQAssignedModal" Closing="@EditHQAssignedModal.CancelClosingModalWhenFocusLost">
     <ModalContent Centered="true">
         <Form id="CreateHQAssignedForm">
@@ -77,21 +89,14 @@
                 <ModalTitle>@L["NewHQAssigned"]</ModalTitle>
                 <CloseButton Clicked="CloseCreateHQAssignedModalAsync" />
             </ModalHeader>
-            <ModalBody>
-                <Tabs SelectedTab="@SelectedCreateTab" SelectedTabChanged="@OnSelectedCreateTabChanged">
-                    <Items>
-                        <Tab Name="hQAssigned-create-tab">@L["HQAssigned"].Value</Tab>
-                        <Tab Name="identityUsers-create-tab">@L["IdentityUsers"].Value</Tab>
-                    </Items>
-                    <Content>
+            <ModalBody>      
                         <Validations @ref="@EditingHQAssignedValidations"
                                      Mode="ValidationMode.Auto"
                                      Model="@EditHQAssignedModal"
                                      ValidateOnLoad="false">
                             <TabPanel Name="identityUsers-create-tab">
-
                                 <Row>
-                                    <Column ColumnSize="ColumnSize.Is9">
+                                    <Column ColumnSize="ColumnSize.Is12">
                                         <Field>
 
                                             <Autocomplete Data="@IdentityUsers"
@@ -108,11 +113,11 @@
                                         </Field>
                                     </Column>
 
-                                    <Column ColumnSize="ColumnSize.Is3">
+                                   @* <Column ColumnSize="ColumnSize.Is3">
                                         <Button Color="Color.Info" TextColor="TextColor.White" Size="Size.Small" Clicked="AddIdentityUser">
                                             <Icon class="fa fa-plus"></Icon> @L["Add"]
                                         </Button>
-                                    </Column>
+                                    </Column>*@
                                 </Row>
                                 @if (SelectedIdentityUsers.Any())
                                 {
@@ -177,9 +182,7 @@
 
                             </TabPanel>
                            
-                        </Validations>
-                    </Content>
-                </Tabs>
+                        </Validations>               
             </ModalBody>
             <ModalFooter>
                 <Button Color="Color.Secondary"
@@ -192,6 +195,159 @@
     </ModalContent>
 </Modal>
 
+
+@* ************************* EDIT MODAL SHARE ************************* *@
+<Modal @ref="EditHQShareModal" Closing="@EditHQShareModal.CancelClosingModalWhenFocusLost" >
+    <ModalContent Centered="true"Size="ModalSize.Large">
+        <Form id="EditHQShareForm">
+            <ModalHeader>
+                <ModalTitle>@L["Update"]</ModalTitle>
+                <CloseButton Clicked="CloseEditHQShareModalAsync" />
+            </ModalHeader>
+            <ModalBody>
+              
+                        <Validations @ref="@EditingHQShareValidations"
+                                     Mode="ValidationMode.Auto"
+                                     Model="@EditingHQShare"
+                                     ValidateOnLoad="false">
+                         <Row>
+
+
+                                   <Column ColumnSize="ColumnSize.Is2">
+                                       <Row>User</Row>
+                                       <Row>Everyone</Row>
+                                   </Column>
+                                   <Column ColumnSize="ColumnSize.Is2">
+                                        <Field>
+                                <Check TValue="bool" @bind-Checked="@EditingHQShareAll.CanRead">@L["CanRead"]</Check>
+                                        </Field>
+                                   </Column>
+
+                                            <Column ColumnSize="ColumnSize.Is2">
+                                        <Field>
+                                            <Check TValue="bool" @bind-Checked="@EditingHQShareAll.CanWrite">@L["CanWrite"]</Check>
+                                        </Field>
+                                    </Column>
+
+                                            <Column ColumnSize="ColumnSize.Is2">
+                                        <Field>
+                                <Check TValue="bool" @bind-Checked="@EditingHQShareAll.CanSubmit">@L["CanSubmit"]</Check>
+                                        </Field>
+                                   </Column>
+
+                                            <Column ColumnSize="ColumnSize.Is2">
+                                        <Field>
+                                <Check TValue="bool" @bind-Checked="@EditingHQShareAll.CanShare">@L["CanShare"]</Check>
+                                        </Field>
+                                    </Column>
+                        </Row>        
+
+
+                                    @if (SelectedIdentityUsers.Any())
+                                {
+                                    <Table striped-rows="true" responsive-sm="true" class="mt-2">
+                                        <TableHeader>
+                                            <TableHeaderCell><Span class="float-start">@L["Email"]</Span></TableHeaderCell>
+                                        </TableHeader>
+                                        <TableBody>
+                                            @foreach (var identityUser in SelectedIdentityUsers)
+                                            {
+                                                <TableRow>
+                                                    <TableRowCell><Span class="float-start">@identityUser.DisplayName</Span></TableRowCell>
+                                                    <TableRowCell>
+                                                        <span class="btn btn-danger btn-sm float-end"
+                                                      @onclick="() => SelectedIdentityUsers.RemoveAll(s => s.Id == identityUser.Id)">
+                                                            <Icon Class="fa fa-trash"></Icon>
+                                                        </span>
+                                                    </TableRowCell>
+                                        <TableRowCell>
+                                            <Field>
+                                                <Check TValue="bool" @bind-Checked="@checkvalue">@L["CanRead"]</Check>
+                                            </Field>
+                                        </TableRowCell>
+                                        <TableRowCell>
+                                            <Field>
+                                                <Check TValue="bool" @bind-Checked="@EditingHQShare.CanWrite">@L["CanWrite"]</Check>
+                                            </Field>
+                                        </TableRowCell>
+                                        <TableRowCell>
+                                            <Field>
+                                                <Check TValue="bool" @bind-Checked="@EditingHQShare.CanSubmit">@L["CanSubmit"]</Check>
+                                            </Field>
+                                        </TableRowCell>
+                                        <TableRowCell>
+                                            <Field>
+                                                <Check TValue="bool" @bind-Checked="@EditingHQShare.CanShare">@L["CanShare"]</Check>
+                                            </Field>
+                                        </TableRowCell>
+                           
+                                                </TableRow>
+                                            }
+                                        </TableBody>
+                                    </Table>
+                                }
+
+                               <Row>
+                                    <Column ColumnSize="ColumnSize.Is4">
+                                        <Field>
+
+                                            <Autocomplete Data="@IdentityUsers"
+                                                          TItem="LookupDto<Guid>"
+                                                          TValue="string"
+                                                          TextField="@((item) => item.DisplayName)"
+                                                          ValueField="@((item) => item.Id.ToString())"
+                                                          SearchChanged="@GetIdentityUserLookupAsync"                                                      
+                                                          @bind-SelectedValues="@SelectedIdentityUserId"
+                                                          @bind-SelectedTexts="@SelectedIdentityUserText"
+                                                          Placeholder="&#8212;" />
+                                            </Field>
+                                            </Column>
+
+                                         
+                                   <Column ColumnSize="ColumnSize.Is2">
+                                        <Field>
+                                <Check TValue="bool" @bind-Checked="@EditingHQShareAdd.CanRead">@L["CanRead"]</Check>
+                                        </Field>
+                                   </Column>
+
+                                            <Column ColumnSize="ColumnSize.Is2">
+                                        <Field>
+                                <Check TValue="bool" @bind-Checked="@EditingHQShareAdd.CanWrite">@L["CanWrite"]</Check>
+                                        </Field>
+                                    </Column>
+
+                                            <Column ColumnSize="ColumnSize.Is2">
+                                        <Field>
+                                <Check TValue="bool" @bind-Checked="@EditingHQShareAdd.CanSubmit">@L["CanSubmit"]</Check>
+                                        </Field>
+                                   </Column>
+
+                                            <Column ColumnSize="ColumnSize.Is2">
+                                        <Field>
+                                <Check TValue="bool" @bind-Checked="@EditingHQShareAdd.CanShare">@L["CanShare"]</Check>
+                                        </Field>
+                                    </Column>
+                               </Row>        
+                               <Row>
+
+                                <Column ColumnSize="ColumnSize.Is2">
+                                <Button Color="Color.Info" TextColor="TextColor.White" Size="Size.Small" Clicked="AddIdentityUser">
+                                <Icon class="fa fa-plus"></Icon> @L["Add"]
+                                </Button>
+                                </Column>
+                               </Row>
+                        </Validations>          
+            </ModalBody>
+            <ModalFooter>
+                <Button Color="Color.Secondary"
+                        Clicked="CloseEditHQShareModalAsync">
+                    @L["Cancel"]
+                </Button>
+                <SubmitButton Form="CreateHQShareForm" Clicked="CreateHQShareAsync" />
+            </ModalFooter>
+        </Form>
+    </ModalContent>
+</Modal>
 <style>
     .title {
         margin-left: 10px;
