--- a/HQSOFT.Common/src/HQSOFT.Common.Blazor/Pages/Common/HQShares.razor
+++ b/HQSOFT.Common/src/HQSOFT.Common.Blazor/Pages/Common/HQShares.razor
@@ -154,7 +154,7 @@
     </CardBody>
 </Card>
 
-@* ************************* CREATE MODAL ************************* *@
+@* ************************* CREATE MODAL ASSIGNMENT ************************* *@
 <Modal @ref="CreateHQShareModal" Closing="@CreateHQShareModal.CancelClosingModalWhenFocusLost">
     <ModalContent Centered="true">
         <Form id="CreateHQShareForm">
@@ -266,7 +266,7 @@
     </ModalContent>
 </Modal>
 
-@* ************************* EDIT MODAL ************************* *@
+@* ************************* EDIT MODAL SHARE ************************* *@
 <Modal @ref="EditHQShareModal" Closing="@EditHQShareModal.CancelClosingModalWhenFocusLost">
     <ModalContent Centered="true">
         <Form id="EditHQShareForm">
